--- a/package/efl/libelementary/Config.in
+++ b/package/efl/libelementary/Config.in
@@ -3,10 +3,7 @@ comment "libelementary needs a toolchain w/ threads"
 
 config BR2_PACKAGE_LIBELEMENTARY
 	bool "libelementary"
-	select BR2_PACKAGE_LIBEINA
-	select BR2_PACKAGE_LIBEVAS
-	select BR2_PACKAGE_LIBECORE
-	select BR2_PACKAGE_LIBEDJE
+	select BR2_PACKAGE_EFLCORE
 	depends on BR2_TOOLCHAIN_HAS_THREADS # libevas
 	help
 	  Elementary is a widget toolkit and EFL wrapper and convenience
