--- a/package/efl/libevas-generic-loaders/Config.in
+++ b/package/efl/libevas-generic-loaders/Config.in
@@ -1,6 +1,6 @@
 config BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS
 	bool "libevas generic loaders"
-	select BR2_PACKAGE_LIBEINA
+	select BR2_PACKAGE_EFLCORE
 	select BR2_PACKAGE_ZLIB
 	help
 	  These are additional "generic" loaders for Evas that are
