--- a/package/enlightenment/Config.in
+++ b/package/enlightenment/Config.in
@@ -1,32 +1,25 @@
 config BR2_PACKAGE_ENLIGHTENMENT
 	bool "enlightenment"
-	select BR2_PACKAGE_LIBECORE
-	select BR2_PACKAGE_LIBECORE_X
-	select BR2_PACKAGE_LIBEINA
-	select BR2_PACKAGE_LIBEET
-	select BR2_PACKAGE_LIBEVAS
-	select BR2_PACKAGE_LIBEVAS_JPEG
-	select BR2_PACKAGE_LIBEVAS_PNG
-	select BR2_PACKAGE_LIBEVAS_EET
-	select BR2_PACKAGE_LIBECORE_EVAS
-	select BR2_PACKAGE_LIBEDJE
-	select BR2_PACKAGE_LIBEFREET
-	select BR2_PACKAGE_LIBEDBUS
-	select BR2_PACKAGE_LIBEIO
+	select BR2_PACKAGE_EFL
+	select BR2_PACKAGE_EFL_X
+	select BR2_PACKAGE_EFL_JPEG # needed at runtime by enlightenment_start
+	select BR2_PACKAGE_EFL_PNG # needed at runtime by enlightenment_start
 	select BR2_PACKAGE_XCB_UTIL_KEYSYMS
+	select BR2_PACKAGE_LIBELEMENTARY
 	select BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS
 	select BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS_SVG
 	# libevas-generic-loaders-svg -> librsvg -> glib2 / pango
 	depends on BR2_USE_WCHAR
 	depends on BR2_INSTALL_LIBSTDCPP
-	# libedbus -> dbus
-	# libedbus -> glib2, libevas
+	# efl -> dbus
+	# efl -> glib2, libevas
 	depends on BR2_TOOLCHAIN_HAS_THREADS
-	# libedbus -> dbus, efl libraries
+	# efl -> dbus, efl libraries
 	depends on BR2_USE_MMU
 	depends on BR2_PACKAGE_XORG7
 	# libevas-generic-loaders-svg -> librsvg -> pango -> cairo
 	depends on BR2_ARCH_HAS_ATOMICS
+	depends on BR2_PACKAGE_HAS_UDEV # efl -> libudev
 	help
 	  Enlightenment, also known simply as E, is a stacking window
 	  manager for the X Window System which can be used alone or
@@ -36,7 +29,7 @@ config BR2_PACKAGE_ENLIGHTENMENT
 
 	  http://www.enlightenment.org/
 
-comment "enlightenment needs a toolchain w/ wchar, C++, threads"
+comment "enlightenment needs a toolchain w/ C++ , threads, wchar"
 	depends on BR2_PACKAGE_XORG7 && BR2_USE_MMU
-	depends on !BR2_USE_WCHAR || !BR2_TOOLCHAIN_HAS_THREADS || !BR2_INSTALL_LIBSTDCPP
+	depends on !BR2_INSTALL_LIBSTDCPP || !BR2_TOOLCHAIN_HAS_THREADS || !BR2_USE_WCHAR
 	depends on BR2_ARCH_HAS_ATOMICS
