enlightenment: bump to version 0.19.4
Update url, switch select to efl-core.

Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/enlightenment/Config.in
+++ b/package/enlightenment/Config.in
@@ -1,20 +1,10 @@
 config BR2_PACKAGE_ENLIGHTENMENT
 	bool "enlightenment"
 	select BR2_PACKAGE_EFL
-	select BR2_PACKAGE_LIBECORE
-	select BR2_PACKAGE_LIBECORE_X
-	select BR2_PACKAGE_LIBEINA
-	select BR2_PACKAGE_LIBEET
-	select BR2_PACKAGE_LIBEVAS
-	select BR2_PACKAGE_LIBEVAS_JPEG
-	select BR2_PACKAGE_LIBEVAS_PNG
-	select BR2_PACKAGE_LIBEVAS_EET
-	select BR2_PACKAGE_LIBECORE_EVAS
-	select BR2_PACKAGE_LIBEDJE
-	select BR2_PACKAGE_LIBEFREET
+	select BR2_PACKAGE_EFL_CORE
 	select BR2_PACKAGE_LIBEDBUS
-	select BR2_PACKAGE_LIBEIO
 	select BR2_PACKAGE_XCB_UTIL_KEYSYMS
+	select BR2_PACKAGE_LIBELEMENTARY
 	select BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS
 	select BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS_SVG
 	# libevas-generic-loaders-svg -> librsvg -> glib2 / pango
