package/efl: add efl-core target package
Add the efl-core package which contains an updated version of the following
libraries:
libecore, libedje, libeet, libfreet, libeina, libeio, libembryo, libthumb, libevas.
It also contains eldbus, ephysics, and escape, see [1].

For now, the bump to efl 1.14.0 is not complete.
This allows to build at least a default configuration whithout X11 support or
graphics acceleration.
This support can be added by a follow up patches series.

Also, add BR2_PACKAGE_EFLCORE_RECOMMENDED_CONFIG config option in order to select
all recommanded packages that allows to build efl-core whithout the extra-long
--enable-i-really-know-what-i-am-doing...

At the end of the configure script, the summary tab will show that
alsa support is allways disabled even if alsa-utils has been build
before efl-core package.

"Ecore_Audio.....: yes (-alsa +pulseaudio +sndfile)"
This is intentional.

[1] See https://phab.enlightenment.org/phame/live/3/post/efl_1_8/

Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/efl/Config.in
+++ b/package/efl/Config.in
@@ -10,6 +10,7 @@ menuconfig BR2_PACKAGE_EFL
 
 if BR2_PACKAGE_EFL
 
+source "package/efl/efl-core/Config.in"
 source "package/efl/expedite/Config.in"
 source "package/efl/libeina/Config.in"
 source "package/efl/libecore/Config.in"
