--- a/package/efl/libedbus/Config.in
+++ b/package/efl/libedbus/Config.in
@@ -1,7 +1,6 @@
 config BR2_PACKAGE_LIBEDBUS
 	bool "libedbus"
-	select BR2_PACKAGE_LIBEINA
-	select BR2_PACKAGE_LIBECORE
+	select BR2_PACKAGE_EFLCORE
 	select BR2_PACKAGE_DBUS
 	depends on BR2_TOOLCHAIN_HAS_THREADS # dbus
 	depends on BR2_USE_MMU # dbus
