--- a/package/efl/expedite/Config.in
+++ b/package/efl/expedite/Config.in
@@ -1,8 +1,6 @@
 config BR2_PACKAGE_EXPEDITE
 	bool "expedite"
-	select BR2_PACKAGE_LIBEINA
-	select BR2_PACKAGE_LIBEVAS
-	select BR2_PACKAGE_LIBEET
+	select BR2_PACKAGE_EFLCORE
 	depends on BR2_INSTALL_LIBSTDCPP
 	depends on BR2_TOOLCHAIN_HAS_THREADS # libevas
 	help
