package/enlightenment: add eflcore reverse dependency on libudev
Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/enlightenment/Config.in
+++ b/package/enlightenment/Config.in
@@ -17,6 +17,7 @@ config BR2_PACKAGE_ENLIGHTENMENT
 	depends on BR2_PACKAGE_XORG7
 	# libevas-generic-loaders-svg -> librsvg -> pango -> cairo
 	depends on BR2_ARCH_HAS_ATOMICS
+	depends on BR2_PACKAGE_HAS_UDEV # eflcore -> libudev
 	help
 	  Enlightenment, also known simply as E, is a stacking window
 	  manager for the X Window System which can be used alone or
