--- a/package/Config.in
+++ b/package/Config.in
@@ -31,6 +31,7 @@ menu "Audio and video applications"
 	source "package/on2-8170-libs/Config.in"
 	source "package/opus-tools/Config.in"
 	source "package/pulseaudio/Config.in"
+	source "package/rage/Config.in"
 	source "package/sox/Config.in"
 	source "package/tidsp-binaries/Config.in"
 	source "package/tovid/Config.in"
