--- a/package/Config.in
+++ b/package/Config.in
@@ -1384,6 +1384,7 @@ comment "Utilities"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 	source "package/time/Config.in"
 endif
+	source "package/terminology/Config.in"
 	source "package/tmux/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
 	source "package/which/Config.in"
