package/empc: new package
Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/Config.in
+++ b/package/Config.in
@@ -8,6 +8,7 @@ menu "Audio and video applications"
 	source "package/bellagio/Config.in"
 	source "package/dvdauthor/Config.in"
 	source "package/dvdrw-tools/Config.in"
+	source "package/empc/Config.in"
 	source "package/espeak/Config.in"
 	source "package/faad2/Config.in"
 	source "package/ffmpeg/Config.in"
