package/ecrire: new package
Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/Config.in
+++ b/package/Config.in
@@ -1448,6 +1448,7 @@ endif
 endmenu
 
 menu "Text editors and viewers"
+	source "package/ecrire/Config.in"
 	source "package/ed/Config.in"
 	source "package/joe/Config.in"
 if BR2_PACKAGE_BUSYBOX_SHOW_OTHERS
