--- a/package/Config.in
+++ b/package/Config.in
@@ -251,6 +251,7 @@ endif
 	source "package/mesa3d-headers/Config.in"
 	source "package/ocrad/Config.in"
 	source "package/psplash/Config.in"
+	source "package/python-efl/Config.in"
 	source "package/sawman/Config.in"
 	source "package/sdl/Config.in"
 	source "package/sdl2/Config.in"
