--- a/package/Config.in
+++ b/package/Config.in
@@ -343,6 +343,7 @@ endif
 	source "package/dtv-scan-tables/Config.in"
 	source "package/dvb-apps/Config.in"
 	source "package/dvbsnoop/Config.in"
+	source "package/econnman/Config.in"
 	source "package/eeprog/Config.in"
 	source "package/eudev/Config.in"
 	source "package/evemu/Config.in"
