--- a/package/Config.in
+++ b/package/Config.in
@@ -792,6 +792,7 @@ menu "Graphics"
 	source "package/libdmtx/Config.in"
 	source "package/libdri2/Config.in"
 	source "package/libdrm/Config.in"
+	source "package/libetrophy/Config.in"
 	source "package/libexif/Config.in"
 	source "package/libfreeimage/Config.in"
 	source "package/libgail/Config.in"
