package/libcanberra: new package
Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/Config.in
+++ b/package/Config.in
@@ -686,6 +686,7 @@ menu "Audio/Sound"
 	source "package/celt051/Config.in"
 	source "package/fdk-aac/Config.in"
 	source "package/libao/Config.in"
+	source "package/libcanberra/Config.in"
 	source "package/libcdaudio/Config.in"
 	source "package/libcdio/Config.in"
 	source "package/libcue/Config.in"
