--- a/package/Config.in
+++ b/package/Config.in
@@ -206,6 +206,7 @@ endmenu
 
 menu "Games"
 	source "package/doom-wad/Config.in"
+	source "package/e-cho/Config.in"
 	source "package/elemines/Config.in"
 	source "package/gnuchess/Config.in"
 	source "package/lbreakout2/Config.in"
