package/expedite: move to package directory
Add efl reverse dependencies.

Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/Config.in
+++ b/package/Config.in
@@ -65,6 +65,7 @@ menu "Debugging, profiling and benchmark"
 	source "package/dropwatch/Config.in"
 	source "package/dstat/Config.in"
 	source "package/duma/Config.in"
+	source "package/expedite/Config.in"
 	source "package/fio/Config.in"
 	source "package/gdb/Config.in"
 	source "package/google-breakpad/Config.in"
