--- a/package/Config.in
+++ b/package/Config.in
@@ -240,6 +240,7 @@ endif
 	source "package/freerdp/Config.in"
 	source "package/imagemagick/Config.in"
 	source "package/libelementary/Config.in"
+	source "package/libevas-generic-loaders/Config.in"
 	source "package/linux-fusion/Config.in"
 	source "package/lite/Config.in"
 	source "package/mesa3d/Config.in"
