package/efl: move one directory higher
We usually do not have a sub-directory for a family of related
packages, so move efl packages one directory higher, so they
all are in package/

Also re-order packages alphabetically

Remove efl package for now without legacy handling, it'll
re-added in a follow up patch during efl version bump.

Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/Config.in
+++ b/package/Config.in
@@ -239,7 +239,17 @@ endif
 	source "package/fbv/Config.in"
 	source "package/freerdp/Config.in"
 	source "package/imagemagick/Config.in"
+	source "package/libecore/Config.in"
+	source "package/libeet/Config.in"
+	source "package/libedje/Config.in"
+	source "package/libefreet/Config.in"
+	source "package/libeina/Config.in"
+	source "package/libeio/Config.in"
+	source "package/libedbus/Config.in"
 	source "package/libelementary/Config.in"
+	source "package/libembryo/Config.in"
+	source "package/libethumb/Config.in"
+	source "package/libevas/Config.in"
 	source "package/libevas-generic-loaders/Config.in"
 	source "package/linux-fusion/Config.in"
 	source "package/lite/Config.in"
@@ -258,7 +268,6 @@ endif
 	source "package/sdl_ttf/Config.in"
 
 comment "Other GUIs"
-	source "package/efl/Config.in"
 	source "package/qt/Config.in"
 	source "package/qt5/Config.in"
 if BR2_PACKAGE_QT || BR2_PACKAGE_QT5
