--- a/package/libeina/Config.in
+++ b/package/libeina/Config.in
@@ -1,6 +1,12 @@
 config BR2_PACKAGE_LIBEINA
 	bool "libeina"
+	depends on BR2_USE_MMU # efl
+	depends on BR2_USE_WCHAR # efl
+	
 	help
 	  Eina is a tiny library to handle data types (list, hash, etc.)
 
 	  http://trac.enlightenment.org/e/wiki/Eina
+
+comment "libeina needs a toolchain w/ wchar"
+	depends on !BR2_USE_WCHAR
