--- a/package/libeio/Config.in
+++ b/package/libeio/Config.in
@@ -4,6 +4,8 @@ config BR2_PACKAGE_LIBEIO
 	select BR2_PACKAGE_LIBEINA
 	select BR2_PACKAGE_LIBECORE
 	depends on BR2_TOOLCHAIN_HAS_THREADS
+	depends on BR2_USE_MMU # efl
+	depends on BR2_USE_WCHAR # efl
 	help
 	  Eio integrates with EFL (Ecore, Eina) to provide efficient
 	  filesystem Input/Output (I/O). It use the best techniques to
@@ -18,5 +20,5 @@ config BR2_PACKAGE_LIBEIO
 
 	  http://trac.enlightenment.org/e/wiki/Eio
 
-comment "libeio needs a toolchain w/ threads"
-	depends on !BR2_TOOLCHAIN_HAS_THREADS
+comment "libeio needs a toolchain w/ threads, wchar"
+	depends on !BR2_TOOLCHAIN_HAS_THREADS || !BR2_USE_WCHAR
