--- a/package/libevas/Config.in
+++ b/package/libevas/Config.in
@@ -1,5 +1,5 @@
-comment "libevas needs a toolchain w/ threads"
-	depends on !BR2_TOOLCHAIN_HAS_THREADS
+comment "libevas needs a toolchain w/ threads, wchar"
+	depends on !BR2_TOOLCHAIN_HAS_THREADS || !BR2_USE_WCHAR
 
 config BR2_PACKAGE_LIBEVAS
 	bool "libevas"
@@ -9,6 +9,8 @@ config BR2_PACKAGE_LIBEVAS
 	# be built without threads. This should be revisited when efl
 	# is bumped to 1.8.
 	depends on BR2_TOOLCHAIN_HAS_THREADS
+	depends on BR2_USE_MMU # efl
+	depends on BR2_USE_WCHAR # efl
 	select BR2_PACKAGE_FREETYPE
 	select BR2_PACKAGE_LIBEINA
 	# required to build so far
