--- a/package/efl/Config.in
+++ b/package/efl/Config.in
@@ -7,6 +7,7 @@ config BR2_PACKAGE_EFL
 	depends on BR2_USE_MMU
 	select BR2_PACKAGE_DBUS
 	select BR2_PACKAGE_FREETYPE
+	select BR2_PACKAGE_LIBCURL # eina_module, runtime dependency
 	select BR2_PACKAGE_LUA # Evas lua 5.1 or 5.2
 	select BR2_PACKAGE_GETTEXT if BR2_NEEDS_GETTEXT_IF_LOCALE
 	select BR2_PACKAGE_LIBXKBCOMMON if BR2_PACKAGE_WAYLAND
