package/efl: add libblkid dependency
Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/efl/Config.in
+++ b/package/efl/Config.in
@@ -28,6 +28,7 @@ config BR2_PACKAGE_EFL_RECOMMENDED_CONFIG
 	select BR2_PACKAGE_LIBSNDFILE
 	select BR2_PACKAGE_PULSEAUDIO
 	select BR2_PACKAGE_UTIL_LINUX
+	select BR2_PACKAGE_UTIL_LINUX_LIBBLKID
 	select BR2_PACKAGE_UTIL_LINUX_LIBMOUNT
 	default y
 	help
