--- a/package/efl/Config.in
+++ b/package/efl/Config.in
@@ -64,6 +64,11 @@ config BR2_PACKAGE_EFL_TIFF
 	help
 	  This enables the loader code that loads tiff files.
 
+config BR2_PACKAGE_EFL_WEBP
+	bool "libevas webp image loader"
+	help
+	  This enables the loader code that loads images using WebP.
+
 endif # BR2_PACKAGE_EFL
 
 comment "efl needs a toolchain w/ threads, wchar, C++"
