package/efl: add jp2k config option
Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/efl/Config.in
+++ b/package/efl/Config.in
@@ -49,6 +49,13 @@ config BR2_PACKAGE_EFL_PNG
 	  This enables the loader code that loads png files using
 	  libpng.
 
+config BR2_PACKAGE_EFL_JP2K
+	bool "libevas jp2k loader"
+	select BR2_PACKAGE_OPENJPEG
+	help
+	  This enables the loader code that loads jp2k files using
+	  openjpeg.
+
 config BR2_PACKAGE_EFL_JPEG
 	bool "libevas jpeg loader"
 	select BR2_PACKAGE_JPEG
