--- a/package/efl/Config.in
+++ b/package/efl/Config.in
@@ -93,6 +93,9 @@ choice
 config BR2_PACKAGE_EFL_X_XLIB_GLX_FULL
 	bool "libevas OpenGL full support"
 	depends on BR2_PACKAGE_HAS_LIBGL
+	select BR2_PACKAGE_SDL if BR2_PACKAGE_EFL_SDL2 # needed for sdl_gfx
+	select BR2_PACKAGE_SDL_GFX if BR2_PACKAGE_EFL_SDL2 # evas include sdl header in ecore_evas_sdl.c
+	select BR2_PACKAGE_LIBGLU if BR2_PACKAGE_EFL_SDL2 # evas depends on libglu header in evas_engine.c
 
 comment "libevas OpenGLES support needs libgl"
 	depends on !BR2_PACKAGE_HAS_LIBGL
