package/libevas-generic-loaders: bump to version 1.14.0
Update url and add a hash file.

Also add efl reverse dependencies.

Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/libevas-generic-loaders/Config.in
+++ b/package/libevas-generic-loaders/Config.in
@@ -1,7 +1,10 @@
 config BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS
 	bool "libevas generic loaders"
-	select BR2_PACKAGE_LIBEINA
+	select BR2_PACKAGE_EFL
 	select BR2_PACKAGE_ZLIB
+	depends on BR2_INSTALL_LIBSTDCPP # efl
+	depends on BR2_PACKAGE_HAS_UDEV # efl -> libudev
+	depends on BR2_TOOLCHAIN_HAS_THREADS # efl
 	depends on BR2_USE_WCHAR # efl
 	depends on BR2_USE_MMU # efl
 	help
@@ -9,7 +12,7 @@ config BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS
 	  stand-alone executables that evas may run from its generic
 	  loader module.
 
-	  http://trac.enlightenment.org/e/wiki/Evas_Generic_Loaders
+	  https://www.enlightenment.org/
 
 if BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS
 
@@ -17,17 +20,11 @@ config BR2_PACKAGE_LIBEVAS_GENERIC_LOADERS_SVG
 	bool "SVG loader"
 	select BR2_PACKAGE_LIBRSVG
 	select BR2_PACKAGE_CAIRO
-	depends on BR2_TOOLCHAIN_HAS_THREADS # librsvg -> glib2
-	depends on BR2_INSTALL_LIBSTDCPP # librsvg -> pango
 	depends on BR2_ARCH_HAS_ATOMICS # cairo
 	help
 	  This option enables the Evas generic SVG loader
 
-comment "SVG loader needs a toolchain w/ threads, C++"
-	depends on BR2_ARCH_HAS_ATOMICS
-	depends on !BR2_TOOLCHAIN_HAS_THREADS || !BR2_INSTALL_LIBSTDCPP
-
 endif
 
-comment "libevas generic loaders needs a toolchain w/ wchar"
-	depends on !BR2_USE_WCHAR
+comment "libevas generic loaders needs a toolchain w/ C++, threads, wchar"
+	depends on !BR2_INSTALL_LIBSTDCPP || !BR2_TOOLCHAIN_HAS_THREADS || !BR2_USE_WCHAR
