package/efl/expedite: bump to efl-1.14 branch
Since expedite hasn't been released since 1.7.10 release,
use efl-1.14 branch in the git tree.

Autoreconf the package since there is no configure script
in the git tree.

Signed-off-by: Romain Naour <romain.naour@openwide.fr>

--- a/package/expedite/Config.in
+++ b/package/expedite/Config.in
@@ -1,10 +1,9 @@
 config BR2_PACKAGE_EXPEDITE
 	bool "expedite"
-	select BR2_PACKAGE_LIBEINA
-	select BR2_PACKAGE_LIBEVAS
-	select BR2_PACKAGE_LIBEET
-	depends on BR2_INSTALL_LIBSTDCPP
-	depends on BR2_TOOLCHAIN_HAS_THREADS # libevas
+	select BR2_PACKAGE_EFL
+	depends on BR2_INSTALL_LIBSTDCPP # efl
+	depends on BR2_PACKAGE_HAS_UDEV # efl -> libudev
+	depends on BR2_TOOLCHAIN_HAS_THREADS # efl
 	depends on BR2_USE_MMU # efl
 	depends on BR2_USE_WCHAR # efl
 	help
